# careervp

./: .clauderules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT_PROCEDURE.md  Makefile  PROGRESS.md  README.md  README2.md  TASK_SUMMARY.md  github_workflows.md  plan.md  temp
.build/common_layer/: requirements.txt
.github/scripts/: cfn-guard.sh  wait-for-api.sh
.github/workflows/: cdk-diff.yml  codeql-analysis.yml.yml  company-research.yml  cover-letter.yml  cv-tailoring.yml  deploy-vpr-async.yml  deploy.yml  gap-analysis.yml  gap-remediation.yml  infra-tests.yml  main-serverless-service.yml  openapi-drift.yml  pr-serverless-service.yml  pr-validation.yml  refactoring-validation.yml  scorecard.yml  test-anthropic-handshake.yml  test-changeset.yml
.omc/sessions/: 7552d0ae-0d63-434f-a75e-5159dc3ab735.json
.omc/state/: subagent-tracking.json
docs/: CODEX_INSTRUCTIONS_Phase_8.md
docs/architecture/: COVER_LETTER_DESIGN.md  (+9 more)
infra/: app.py  cdk.json  pyproject.toml
infra/.omc/state/checkpoints/: checkpoint-2026-02-01T15-26-50-766Z.json
infra/careervp/: api_construct.py  api_db_construct.py  constants.py  dynamodb_stack.py  monitoring.py  naming_utils.py  s3_stack.py  service_stack.py  utils.py  waf_construct.py
infra/careervp/specs/: _registry.yaml  dynamodb_spec.yaml  s3_spec.yaml
infra/service_cdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/tests/: __init__.py
infra/tests/infrastructure/: __init__.py  conftest.py  test_api_construct.py  test_monitoring.py  test_naming_utils.py
tests/: __init__.py
(+378 files in other folders)
